# BeyondAgri-monorepo

./: .env.example  .gitignore  FARM_MANAGEMENT_IMPLEMENTATION_PLAN.md  MARKETPLACE_INVENTORY_IMPLEMENTATION_PLAN.md  README.md  app.json  eslint.config.js  package-lock.json  package.json  pyproject.toml
alembic/: env.py
alembic/versions/: 001_create_account_structure.py  003_rename_auth_fields.py  007_add_marketplace_product_listings.py  008_add_structured_address_fields.py  ab0bd971beb2_initial_migration_create_users_table.py  (+1 more)
app/: _layout.tsx  index.tsx  main.py
backend/: .gitignore  ACCOUNT_RESTRUCTURE.md  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_account_structure.py  002_database_improvements.py  004_add_phone_uniqueness.py  009_add_farm_elevation.py  010_add_orders_table.py  011_add_wholesaler_detail_fields.py  eb237c60beaf_add_phase_1_inventory_management_tables.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  geocoding.py  orders.py  weather.py
backend/app/core/: constants.py  deps.py  security.py
backend/app/models/: __init__.py  account.py  marketplace.py  order.py  profile.py  verification.py
backend/app/schemas/: account.py  auth.py  geocoding.py  inventory.py  marketplace.py  order.py  weather.py
backend/app/services/: account_service.py  marketplace_service.py  order_service.py  phone_verification_service.py  weather_service.py
backend/docs/: FRONTEND_IMPLEMENTATION_COMMANDS.md  IMPLEMENTATION_SUMMARY.md  README.md  README_FRONTEND_DOCS.md
backend/docs/api/: authentication.md
backend/docs/api/inventory/: overview.md
backend/tests/: test_accounts.py  test_maps.py
docs/: FRONTEND_IMPLEMENTATION_COMMANDS.md  FRONTEND_INVENTORY_INTEGRATION_GUIDE.md  FRONTEND_QUICK_START.md  IMPLEMENTATION_SUMMARY.md  README.md
mobile/: .prettierignore  package-lock.json  package.json
plans/: connect-inventory-to-marketplace.md  google-maps-integration.md  role-based-experience-and-ordering.md
scripts/: seed_farmer_data.py
tests/: test_authentication.py  test_geocoding.py  test_inventory.py  test_marketplace.py
(+145 files in other folders)
